--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -3,8 +3,15 @@
   padding: 0;
 }
 
+ul {
+  list-style-type: none;
+}
+
 .container {
   text-align: center;
+  display: grid;
+  grid-template: 2fr 1fr 10fr 1fr / 1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
@@ -17,6 +24,19 @@
 
 .header {
   background-color: #393f4d;
+  grid-area: 1 / 1 / 2 / 3;
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  align-items: center;
+}
+
+.header > .logo {
+  justify-self: start;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .menu ul,
@@ -26,6 +46,10 @@
 
 .sidebar {
   background-color: #FF7755;
+  grid-area: 2 / 1 / 4 / 2;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr); 
+  row-gap: 50px;
 }
 
 .sidebar .photo {
@@ -36,6 +60,10 @@
   border-radius: 10px;
 }
 
+.sidebar > * {
+  display: grid;
+  place-items: center;
+}
 
 .sidebar .side-content {
   background-color: white;
@@ -46,6 +74,13 @@
 
 .nav {
   background-color: #FF7755;
+  grid-area: 2 / 2 / 3 / 3;
+  display: grid;
+}
+
+.nav > ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .nav ul li {
@@ -55,6 +90,12 @@
 
 .article {
   background-color: #bccbde;
+  grid-area: 3 / 2 / 4 / 3;
+  overflow: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: 250px;
+  gap: 15px;
 }
 
 .article p {
@@ -79,13 +120,17 @@
 .card .title {
   font-size: 18px;
   text-align: center;
+  margin-bottom: 16px;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-area: 4 /1 / 5 / 3;
+  display: grid;
+  place-items: center;
 }
 
 .footer p {
   font-size: 13px;
-  font-weight: normal;  
+  font-weight: normal;
 }
